--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "font-awesome": "~4.4.0"
+    "font-awesome": "~4.4.0",
+    "vue": "^1.0.26"
   }
 }
