--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "qr-image": "^3.1.0",
     "rand-token": "^0.2.1",
     "request": "^2.55.0",
-    "serve-static": "^1.4.0"
+    "serve-static": "^1.4.0",
+    "socket.io": "^1.4.8"
   }
 }
