--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "font-awesome": "~4.4.0",
-    "vue": "^1.0.26"
+    "vue": "^1.0.26",
+    "notify": "^0.0.1"
   }
 }
