--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-jshint": "^1.5.3",
     "gulp-livereload": "^2.0.0",
     "gulp-load-plugins": "^0.7.1",
+    "gulp-minify": "0.0.14",
     "gulp-minify-html": "^0.1.6",
     "gulp-plumber": "^0.6.3",
     "gulp-replace": "^0.4.0",
