--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,12 @@ build/Release
 node_modules
 
 # Bower dependency directory
-bower_components
+#bower_components
 
 # Temporary local files
 .sass-cache
 .tmp
 
 # Distribution folder from build
-dist
+#dist
 .c9
